--- a/index.html
+++ b/index.html
@@ -10,7 +10,36 @@
 </head>
 
 <body>
-
+  <header>
+    <div class="logo">
+      <img src="images/odin-lined.png" alt="">
+      <h1 class="logo-text">Odin</h1>
+    </div>
+    <p class="image-credit">Photo by <a
+        href="https://unsplash.com/@marekpiwnicki?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Marek
+        Piwnicki</a> on <a
+        href="https://unsplash.com/@marekpiwnicki?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></a>
+    </p>
+  </header>
+  <main>
+    <div class="hero">
+      <p>This is not a real online service! You know you need something like this in your life to help you realize your
+        deepest dreams. Sign up now to get started.</p>
+      <p>You know you want to.</p>
+    </div>
+    <form>
+      <input type="text">
+      <input type="text">
+      <input type="text">
+      <input type="text">
+      <input type="text">
+      <input type="text">
+    </form>
+    <button>
+      Create Account
+    </button>
+    <p>Already have an account? <a href="#">Log in</a></p>
+  </main>
 </body>
 
 </html>
