--- a/index.html
+++ b/index.html
@@ -28,12 +28,32 @@
       <p>You know you want to.</p>
     </div>
     <form>
-      <input type="text">
-      <input type="text">
-      <input type="text">
-      <input type="text">
-      <input type="text">
-      <input type="text">
+      <p>Let's do this!</p>
+      <div>
+        <label for="first_name">First Name</label>
+        <input type="text" id="first_name">
+      </div>
+      <div>
+        <label for="last_name">Last Name</label>
+        <input type="text" id="last_name">
+      </div>
+      <div>
+        <label for="email">Email Address</label>
+        <input type="email" id="email_address">
+      </div>
+      <div>
+        <label for="phone-number">Phone Number</label>
+        <input type="text" id="phone_number">
+      </div>
+      <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" class="error">
+        <p>* Passwords do not match</p>
+      </div>
+      <div>
+        <label for="confirm-password">Confirm Password</label>
+        <input type="password" id="confirm_password" class="error">
+      </div>
     </form>
     <button>
       Create Account
